Front end - List familia

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -19,6 +19,7 @@
 		
 		<!-- Controllers -->
 		<script type="text/javascript" th:src="@{/modules/home/controllers/home-controller.js}"></script>
+		<script type="text/javascript" th:src="@{/modules/home/controllers/familia-controller.js}"></script>
 	</head>
 		
 	<body ng-controller="HomeController">
@@ -32,7 +33,7 @@
         			<md-icon class="zmdi zmdi-menu zmdi-hc-2x"></md-icon>
       			</md-button>
       			
-      			<img width="150" th:src="@{/static/images/logo-large.png}" alt="Logo"/>
+<!--       			<img width="150" th:src="@{/static/images/logo-large.png}" alt="Logo"/> -->
 				
 				<span flex=""></span>
 				
@@ -55,7 +56,7 @@
  						<md-menu-item>
 				          	<md-button>
 				            	<md-icon class="zmdi zmdi-settings zmdi-hc-lg"></md-icon>
-				            	Configurações
+				            	Configuraçõese
 				          	</md-button>
 				        </md-menu-item>
 				        
@@ -71,14 +72,11 @@
     			</md-menu>
     		</eits-hbox>
 
-    		<md-progress-linear md-mode="indeterminate" ng-if="loading" 
-    			style="position: fixed; top: 59px;">
-    		</md-progress-linear>
+    		
   		</md-toolbar>
   		
   		<md-content style="width: 100%; height: calc(100% - 64px);" ui-view="">
-			<md-progress-circular md-mode="indeterminate" style="left: 50%; top: 50%;">
-			</md-progress-circular>
+			
   		</md-content>
 	</body>
 </html>
