--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
@@ -16,7 +16,7 @@
 	
 		<md-toolbar flex class="md-hue-3 md-osm-theme-theme toolbar-content">
 			<form layout="row" class="default-frame" >
-				<md-toolbar style="background-color:#ffffff" class="default-filter" layout="row">
+				<md-toolbar  class="toolbar-temp default-filter" layout="row">
 					<div flex layout="column">
 						<div layout="row">
 							<md-input-container style="margin-bottom: 20px;" layout="column" flex>
