--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -75,7 +75,7 @@
     		
   		</md-toolbar>
   		
-  		<md-content style="width: 100%; height: calc(100% - 64px);" ui-view="">
+  		<md-content style="width: 100%; height: calc(100% - 64px); overflow:hidden" ui-view="">
 			
   		</md-content>
 	</body>
