ajustes para buildar jenkins

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
@@ -12,6 +12,18 @@
 	        <div md-theme="default" layout="row" layout-align="end center" class="default-header">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="insertFamilia()">Salvar</md-button>
 	        </div>
+	        
+	         <div md-theme="default" layout="row" layout-align="end center" class="default-header">
+		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go(LIST_STATE)">Voltar</md-button>
+	        </div>
+	        
+	        <div ng-if="model.familia.entity.ativo == true" md-theme="default" layout="row" layout-align="end center" class="default-header">
+		        <md-button class="md-raised md-accent default-save-button" ng-click="changeToRemove()">Excluir</md-button>
+	        </div>
+	        
+	        <div ng-if="model.familia.entity.ativo == false" md-theme="default" layout="row" layout-align="end center" class="default-header">
+		        <md-button class="md-raised md-accent default-save-button" ng-click="enableFamilia()">Ativar registro</md-button>
+	        </div>
 	    </md-toolbar>
 		
 		<div layout="column" md-theme="{{}}" style="height: 100%; position:absolute; width:100%;">
@@ -34,7 +46,7 @@
 										    		<label>Nome da família</label>
 									                <input name="nome" required ng-model="model.familia.entity.nome">
 									
-									                <div ng-messages="model.familia.form.status.$error">
+									                <div ng-messages="model.familia.form.nome.$error">
 									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
 									                </div>
 									            </md-input-container>
@@ -43,7 +55,7 @@
 										    		<label>Nome da Mãe</label>
 									                <input name="nomeMae" required ng-model="model.familia.entity.nomeMae">
 									
-									                <div ng-messages="model.familia.form.status.$error">
+									                <div ng-messages="model.familia.form.nomeMae.$error">
 									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
 									                </div>
 									            </md-input-container>
@@ -54,7 +66,7 @@
 										    		<label>Telefone</label>
 									                <input name="telefone" required ng-model="model.familia.entity.telefone">
 									
-									                <div ng-messages="model.familia.form.status.$error">
+									                <div ng-messages="model.familia.form.telefone.$error">
 									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
 									                </div>
 									            </md-input-container>
@@ -67,18 +79,18 @@
 											<div layout="row">
 								    			<md-input-container layout="column" flex="30" style="margin-right:30px">
 										    		<label>Rua</label>
-									                <input name="rua" required ng-model="model.endereco.entity.rua">
+									                <input name="rua" required ng-model="model.familia.entity.endereco.rua">
 									
-									                <div ng-messages="model.familia.form.status.$error">
+									                <div ng-messages="model.familia.form.rua.$error">
 									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
 									                </div>
 									            </md-input-container>
 									            
 									            <md-input-container layout="column" flex="30" ">
 										    		<label>Bairro</label>
-									                <input name="nomeMae" required ng-model="model.endereco.entity.bairro">
+									                <input name="bairro" required ng-model="model.familia.entity.endereco.bairro">
 									
-									                <div ng-messages="model.familia.form.status.$error">
+									                <div ng-messages="model.familia.form.bairro.$error">
 									                	<div ng-message="required" ng-if="model.familia.form.$submitted">Campo obrigatório</div>
 									                </div>
 									            </md-input-container>
@@ -134,8 +146,8 @@
 											<div layout="row">
 												<md-input-container layout="column" flex="30" style="margin-right:30px">
 											        <label>Tipo de Moradia</label>
-											        <md-select  ng-model="model.familia.entity.tipoMoradia">
-											          <md-option ng-repeat="tipoMoradia in allTiposMoradia" value="{{tipoMoradia}}">{{tipoMoradia}}</md-option>
+											        <md-select required ng-model="model.familia.entity.tipoMoradia">
+											          <md-option required ng-repeat="tipoMoradia in allTiposMoradia" value="{{tipoMoradia}}">{{tipoMoradia}}</md-option>
 											        </md-select>
 											    </md-input-container>
 											    
