--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-list.html
@@ -10,7 +10,7 @@
 	    	</div>
 	    	
 	        <div md-theme="default" layout="row" layout-align="end center" class="default-header">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go( ADD_STATE )">{{::'gerais.NOVO' | translate}}</md-button>
+		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go( ADD_STATE )">Novo</md-button>
 	        </div>
 	    </md-toolbar>
 	
@@ -27,7 +27,7 @@
 				            <div layout="row" layout-align="end center" ng-init="currentOption = 'down'">
 					            <md-button class="md-raised md-primary md-hue-2" ng-click="listFamiliasByFilters()">Filtrar</md-button>
 					            <md-button class="md-raised md-primary md-hue-3" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;">
-					            	{{::'gerais.MAIS-OPCOES' | translate}}
+					            	Mais opções
 					            	<i ng-if="!currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-down"></i>
 					            	<i ng-if="currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-up"></i> 
 					            </md-button>
@@ -52,7 +52,7 @@
 					      </tr>
 					    </thead>
 					    <tbody md-body>
-					      <tr md-row md-select="dessert" md-select-id="name" md-auto-select ng-repeat="familia in model.familia.page.content">
+					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( EDIT_STATE, {id:familia.id} )" md-select-id="name" md-auto-select ng-repeat="familia in model.familia.page">
 					        <td md-cell>{{familia.nome}}</td>
 					        <td md-cell>{{familia.nomeMae}}</td>
 					        <td md-cell>{{familia.endereco.rua}}</td>
