Correcao dos testes unitarios

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/familia/familia-form.html
@@ -2,14 +2,14 @@
 <html xmlns:ng="http://angularjs.org" 
 	xmlns:th="http://www.thymeleaf.org" lang="pt">
 	
-<div class="main-div" md-theme="{{graca-theme}}">
+<div class="main-div" >
 	
 		<md-toolbar layout="row" style="z-index: 3;">
 	    	<div flex layout="row" class="default-header">
 		        <h1 class="md-toolbar-tools">Familia</h1>
 	    	</div>
 	    	
-	        <div md-theme="default" layout="row" layout-align="end center" class="default-header">
+	        <div md-theme="default" layout="row" layout-align="end center" class="default-header md-primary md-hue-3">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="insertFamilia()">Salvar</md-button>
 	        </div>
 	        
